styles/style.css
/* Navbar */
.navbar-brand {
  display: flex;
  align-items: center;
  gap: 1.5rem;
}

.bookshelf {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  height: 100%;
}

/* Bookshelf form */
.bookshelf-form {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.bookshelf-form h1 {
  margin-bottom: 1.5rem;
  text-align: center;
}

.bookshelf-form-input {
  width: 100%;
}
.bookshelf-form-input label {
  display: block;
  margin-block: 1rem;
}
.bookshelf-form-input input {
  width: 100%;
}
.bookshelf-form-input select {
  width: 50%;
}

.bookshelf-form-submit {
  width: 100%;
  padding: 0.5rem 1rem;
  margin-top: 3rem;
}
.bookshelf-form-submit:hover {
  cursor: pointer;
  box-shadow: 0 0 10px var(--orange);
}

/* Bookshelf display */
.bookshelf-display {
  flex: 1;
  display: flex;
  flex-direction: column;
}

/* Bookshelf search */
.bookshelf-filter-search {
  display: flex;
  gap: 1rem;
  border-radius: 10px;
}
.bookshelf-filter-search input {
  width: 100%;
}
.bookshelf-filter-search button {
  padding: 1.5rem;
}

/* Bookshelf filter status */
.bookshelf-filter-status {
  padding: 0.5rem;
  border-radius: 10px;
  margin-block: 1.5rem;
}
.bookshelf-filter-status select {
  width: 100%;
}

/* Bookshelf list */
.bookshelf-list {
  height: 100%;
  overflow-y: auto;
}

.bookshelf-list-empty {
  text-align: center;
}

/* Book */
.bookshelf-book {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1.5rem;
  margin-bottom: 1rem;
}

.bookshelf-book-buttons {
  display: flex;
  gap: 0.5rem;
}
.bookshelf-book-buttons button {
  padding: 0.5rem;
}
.bookshelf-book-buttons button:hover {
  cursor: pointer;
  background: var(--dark);
  color: white;
}

/* Add styles for the modal */
.popup {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  justify-content: center;
  align-items: center;
  z-index: 999;
}

.popup-content {
  background-color: var(--dark);
  color: white;
  padding: 1rem;
  border-radius: 10px;
}

.popup-content .confirmation-buttons {
  width: 100%;
  display: flex;
  justify-content: space-between;
  gap: 1rem;
}
.popup-content .confirmation-buttons button {
  width: 100%;
  background: white;
  padding: 0.5rem 5rem;
  margin-top: 1.5rem;
}
.popup-content .confirmation-buttons button:hover {
  cursor: pointer;
  background: var(--orange);
  color: white;
}

.popup-edit h1,
.popup-edit p {
  text-align: center;
}
.popup-edit-input {
  margin-block: 1rem;
}

.copyright {
  color: var(--lighter-dark);
  text-align: center;
  font-size: 0.8rem;
}

@media (max-width: 480px) {
  .navbar-brand {
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;
  }

  .popup-content .confirmation-buttons button {
    padding: 0.5rem 2rem;
  }

  .bookshelf-book {
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
  }
}

@media (max-width: 760px) {
  .bookshelf {
    flex-direction: column;
  }

  .bookshelf-display {
    height: fit-content;
  }
}

